# ChangeLog for dev-perl/YAML-Syck
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/YAML-Syck/ChangeLog,v 1.16 2009/01/09 22:33:06 josejx Exp $

  09 Jan 2009; Joseph Jezak <josejx@gentoo.org> YAML-Syck-1.05.ebuild:
  Marked ~ppc for bug #253448.

  08 Jan 2009; Raúl Porcel <armin76@gentoo.org> YAML-Syck-1.05.ebuild:
  Add ~ia64 wrt #253448

  02 Jan 2009; Friedrich Oslage <bluebird@gentoo.org> YAML-Syck-1.05.ebuild:
  Add ~sparc keyword, bug #253448

  15 Sep 2008; Torsten Veller <tove@gentoo.org> -YAML-Syck-0.71.ebuild,
  -YAML-Syck-0.72.ebuild, -YAML-Syck-0.84.ebuild, -YAML-Syck-0.85.ebuild,
  -YAML-Syck-0.91.ebuild, -YAML-Syck-0.96.ebuild, -YAML-Syck-1.04.ebuild:
  Cleanup

*YAML-Syck-1.05 (24 Aug 2008)

  24 Aug 2008; Torsten Veller <tove@gentoo.org> +YAML-Syck-1.05.ebuild:
  Version bump

*YAML-Syck-1.04 (28 Apr 2008)

  28 Apr 2008; Yuval Yaari <yuval@gentoo.org> +YAML-Syck-1.04.ebuild:
  Version bump

*YAML-Syck-0.96 (19 Aug 2007)

  19 Aug 2007; Yuval Yaari <yuval@gentoo.org> +YAML-Syck-0.96.ebuild:
  Version bump

*YAML-Syck-0.91 (25 Jun 2007)

  25 Jun 2007; Michael Cummings <mcummings@gentoo.org>
  +YAML-Syck-0.91.ebuild:
  Version bump

*YAML-Syck-0.85 (22 Apr 2007)

  22 Apr 2007; Michael Cummings <mcummings@gentoo.org>
  YAML-Syck-0.82.ebuild, YAML-Syck-0.84.ebuild, +YAML-Syck-0.85.ebuild:
  Version bump

  09 Apr 2007; Michael Cummings <mcummings@gentoo.org>
  YAML-Syck-0.82.ebuild:
  Marking stable amd64

*YAML-Syck-0.84 (04 Apr 2007)

  04 Apr 2007; Yuval Yaari <yuval@gentoo.org> +YAML-Syck-0.84.ebuild:
  Version bump

*YAML-Syck-0.82 (05 Feb 2007)

  05 Feb 2007; Michael Cummings <mcummings@gentoo.org>
  +YAML-Syck-0.82.ebuild:
  Version bump

  21 Jan 2007; Michael Cummings <mcummings@gentoo.org>
  +YAML-Syck-0.72.ebuild:
  Version bump

  19 Jan 2007; Michael Cummings <mcummings@gentoo.org>
  -YAML-Syck-0.72.ebuild:
  Ebuild maintenance

*YAML-Syck-0.72 (29 Nov 2006)
