@@ -1,0 +1,20 @@
+# Copyright 1999-2009 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/YAML-Syck/YAML-Syck-1.07.ebuild,v 1.1 2009/04/26 07:28:41 tove Exp $
+
+EAPI=2
+
+MODULE_AUTHOR=AUDREYT
+inherit perl-module
+
+DESCRIPTION="Fast, lightweight YAML loader and dumper"
+
+LICENSE="MIT"
+SLOT="0"
+KEYWORDS="~amd64-linux ~x86-linux ~x86-macos"
+IUSE=""
+
+DEPEND="|| ( dev-libs/syck >=dev-lang/ruby-1.8 )"
+RDEPEND="${DEPEND}"
+
+SRC_TEST="do"
