@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/YAML-Syck
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/YAML-Syck/ChangeLog,v 1.16 2009/01/09 22:33:06 josejx Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/YAML-Syck/ChangeLog,v 1.17 2009/04/26 07:28:41 tove Exp $
+
+*YAML-Syck-1.07 (26 Apr 2009)
+
+  26 Apr 2009; Torsten Veller <tove@gentoo.org> +YAML-Syck-1.07.ebuild:
+  Version bump
 
   09 Jan 2009; Joseph Jezak <josejx@gentoo.org> YAML-Syck-1.05.ebuild:
   Marked ~ppc for bug #253448.
